[package]
name = "serde-resp"
version = "0.3.1"
authors = ["DEDZTBH <peiqial@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Redis RESP protocol serialization and deserialization with serde"
repository = "https://github.com/DEDZTBH/serde-RESP"
keywords = ["redis", "serde", "serialization"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.123" }
itoa = { version = "^0.4.7" }

[dev-dependencies]
